infra/posts/posts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: posts
  name: posts
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: posts
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/posts-default: "true"
        io.kompose.service: posts
    spec:
      containers:
        - env:
            - name: MONGO_DB_URL
              value: mongodb://posts-mongodb:27017/posts-db
            - name: PORT
              value: "3031"
          image: shubhamagg/posts
          name: posts
          imagePullPolicy: Never
          ports:
            - containerPort: 3031
          resources: {}
      restartPolicy: Always
status: {}
