infra/posts/posts-mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: posts-mongodb
  name: posts-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: posts-mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/posts-default: "true"
        io.kompose.service: posts-mongodb
    spec:
      containers:
        - env:
            - name: MONGO_DATA_DIR
              value: /data/db
            - name: MONGO_LOG_DIR
              value: /dev/null
          image: mongo:4.2
          name: posts-mongodb
          ports:
            - containerPort: 27017
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: posts-mongodb-claim0
      restartPolicy: Always
      volumes:
        - name: posts-mongodb-claim0
          persistentVolumeClaim:
            claimName: posts-mongodb-claim0
status: {}
