infra/posts/posts-mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: posts-mongodb
  name: posts-mongodb
spec:
  ports:
    - name: "23017"
      port: 23017
      targetPort: 27017
  selector:
    io.kompose.service: posts-mongodb
status:
  loadBalancer: {}
