infra/posts/posts-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: posts
  name: posts
spec:
  ports:
    - name: "3031"
      port: 3031
      targetPort: 3031
  selector:
    io.kompose.service: posts
status:
  loadBalancer: {}
